--- a/purdue/stat656-fall2024/homework1/hw1.rmd
+++ b/purdue/stat656-fall2024/homework1/hw1.rmd
@@ -151,6 +151,7 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
       # Sample from the posterior predictive distribution
       y <- .GlobalEnv$y
       new_y <- rep(0.0, times = length(y))
+      new_y[1] <- y[1]
       sig <- exp(log_sig)
       for (i in 2:length(y)) {
         new_y[i] <- rnorm(n = 1, mean = rho * y[i - 1], sd = sig)
@@ -220,7 +221,7 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
       data <- read.table("data/covid_us.txt", header = TRUE, sep = ",")
       y <- data[["cases"]]
     } else {
-      stop("File not found: 'computation_data_hw_1.csv' at ", getwd())
+      stop("File not found: 'covid_us.txt' at ", getwd())
     }
     plot(
       x = seq_len(length(y)),
@@ -285,7 +286,7 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
     ```{r fig.width=8, fig.height=6}
     y <- c(
       0,
-      diff(y[as.Date(data$date) < as.Date("2020-06-30")], lag = 1) / 100000
+      diff(y[as.Date(data$date) <= as.Date("2020-06-30")], lag = 1) / 100000
     )
     rho <- seq(0.01, 2.0, length = 100)
     log_sig <- seq(-5.0, 0.0, length = 100)
@@ -328,7 +329,6 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
     # Calculate the normalized probability density
     probs <- exp(grid_log_post - max(grid_log_post))
     probs <- probs / sum(probs)
-    print(dim(probs))
     # Randomly sample from the grid
     indices <- sample(
       x = seq_len(length(as.vector(probs))),
@@ -363,7 +363,6 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
       samples[i, ] <- ar_post_predictive(params[i, "rho"], params[i, "log_sig"])
     }
 
-    # Visualize scatter plot
     plot(
       x = seq_along(samples[1, seq(1, length(y))]),
       y = samples[1, seq(1, length(y))],
@@ -428,8 +427,292 @@ The _autoregressive model_ is frequently used to analyze time series data. The s
 
     Based on the posterior predictive checks, the model provides good predictions for the data until June 30. The skewness and kurtosis of the observed data are close to the expected values from the posterior predictive samples, and the time-series visualization shows that the posterior predictive samples are close to the observed data.
 
-6. (10 points) Simulate posterior predictions for the cases and deaths in the United States from July 1 until August 25. Compare these posterior predictions to the actual values of the two variables, and comment on the quality of the AR(1) model for predicting future cases and deaths in this context.
+6. (10 points) **Solution:**
 
-7. (10 points) Now replicate the analyses you performed in step 4 on the entire United States for the state of Indiana individually. Discuss if you think the results agree with the results of the entire United States.
+    The code implementation is as follows:
+    ```{r fig.width=8, fig.height=6}
+    y <- data[["cases"]]
+    y <- diff(y[as.Date(data$date) >= as.Date("2020-06-30") &
+                  as.Date(data$date) <= as.Date("2020-08-25")], lag = 1) / 100000
+    samples <- matrix(NA, nrow = nrow(params), ncol = length(y))
+    for (i in seq_len(nrow(params))) {
+      samples[i, ] <- ar_post_predictive(params[i, "rho"], params[i, "log_sig"])
+    }
+
+    plot(
+      x = seq_along(samples[1, seq(1, length(y))]),
+      y = samples[1, seq(1, length(y))],
+      type = "l",
+      col = "gray",
+      xlab = "Time",
+      ylab = expression(omega[t]),
+      main = "Posterior Predictive Samples vs. Observed Data",
+    )
+    for (i in 2:1000) {
+      lines(x = seq_along(samples[i]), y = samples[i], col = "gray")
+    }
+    lines(x = seq_along(y), y = y, col = "blue")
+
+    skewness_obs <- skewness(y[seq(2, length(y))])
+    sample_skewness <- apply(samples, 1, function(x) skewness(x[seq(2, length(y))]))
+    hist(
+      x = sample_skewness,
+      main = "Skewness of Posterior Predictive Samples",
+      xlab = "Skewness",
+      col = "gray",
+      border = "white",
+    )
+    lines(
+      x = c(skewness_obs, skewness_obs),
+      y = c(0, 300),
+      col = "black",
+      lwd = 2,
+    )
+    text(
+      x = skewness_obs + 0.2,
+      y = 300,
+      labels = paste("Observed Skewness = ", round(skewness_obs, 2)),
+      pos = 1
+    )
+
+    kurtosis_obs <- kurtosis(y[seq(2, length(y))])
+    sample_kurtosis <- apply(samples, 1, function(x) kurtosis(x[seq(2, length(y))]))
+    hist(
+      x = sample_kurtosis,
+      main = "Kurtosis of Posterior Predictive Samples",
+      xlab = "Kurtosis",
+      col = "gray",
+      border = "white",
+    )
+    lines(
+      x = c(kurtosis_obs, kurtosis_obs),
+      y = c(0, 350),
+      col = "black",
+      lwd = 2,
+    )
+    text(
+      x = kurtosis_obs + 0.5,
+      y = 300,
+      labels = paste("Observed Kurtosis = ", round(kurtosis_obs, 2)),
+      pos = 1
+    )
+    ```
+
+    Based on the posterior predictive checks, the model provides a good prediction for the future data from June 30 to August 25. The skewness and kurtosis of the observed data are close to the expected values from the posterior predictive samples, and the time-series visualization shows that the posterior predictive samples are close to the observed data.
+
+7. (10 points) **Solution:**
+
+    The code implementation is as follows:
+    ```{r fig.width=8, fig.height=6}
+    # Read data
+    if (file.exists("data/covid_us.txt")) {
+      data <- read.table("data/covid_us-states.txt", header = TRUE, sep = ",")
+      data <- data[data["state"] == "Indiana", ]  # Filter data for Indiana
+      y <- data[["cases"]]
+    } else {
+      stop("File not found: 'covid_us-states.txt' at ", getwd())
+    }
+
+    y <- c(
+      0,
+      diff(y[as.Date(data$date) <= as.Date("2020-06-30")], lag = 1) / 1000
+    )
+    plot(
+      x = seq_len(length(y)),
+      y = y,
+      type = "l",
+      main = "Daily COVID-19 Case Increase in Indiana",
+      xlab = "Date",
+      ylab = "Cases",
+    )
+
+    rho <- seq(0.01, 2.0, length = 100)
+    log_sig <- seq(-5.0, 0.0, length = 100)
+    log_lik <- outer(rho, log_sig, Vectorize(ar_loglik))
+    contour(
+      x = rho,
+      y = log_sig,
+      z = log_lik,
+      main = "Log-Likelihood Function",
+      xlab = expression(rho),
+      ylab = expression(log(sigma)),
+      nlevels = 20,
+    )
+
+    ar_logpost <- function(rho, log_sig) {
+      log_prior <- -rho - 0.5 * (log_sig * log_sig)
+      log_post <- ar_loglik(rho, log_sig) + log_prior
+      return(log_post)
+    }
+    log_post <- outer(rho, log_sig, Vectorize(ar_logpost))
+    contour(
+      x = rho,
+      y = log_sig,
+      z = log_post,
+      main = "Unnormalized Log-Posterior Density",
+      xlab = expression(rho),
+      ylab = expression(log(sigma)),
+      nlevels = 20,
+    )
+
+    grid_log_post <- outer(rho, log_sig, Vectorize(ar_logpost))
+    # Calculate the normalized probability density
+    probs <- exp(grid_log_post - max(grid_log_post))
+    probs <- probs / sum(probs)
+    # Randomly sample from the grid
+    indices <- sample(
+      x = seq_len(length(as.vector(probs))),
+      size = 1000,
+      replace = TRUE,
+      prob = probs
+    )
+    rho_sample <- rho[((indices - 1) %% nrow(probs)) + 1]
+    log_sig_sample <- log_sig[((indices - 1) %/% nrow(probs)) + 1]
+
+    # Calculate summaries for rho
+    print(quantile(rho_sample, probs = c(0.025, 0.25, 0.5, 0.75, 0.975)))
+    sprintf("Mean: %.4f", mean(rho_sample))
+    sprintf("Standard Deviation: %.4f", sd(rho_sample))
+    sprintf("Skewnewss: %.4f", skewness(rho_sample))
+    sprintf("Kurtosis: %.4f", kurtosis(rho_sample))
+    # Calculate summaries for log(sigma)
+    print(quantile(log_sig_sample, probs = c(0.025, 0.25, 0.5, 0.75, 0.975)))
+    sprintf("Mean: %.4f", mean(log_sig_sample))
+    sprintf("Standard Deviation: %.4f", sd(log_sig_sample))
+    sprintf("Skewness: %.4f", skewness(log_sig_sample))
+    sprintf("Kurtosis: %.4f", kurtosis(log_sig_sample))
+
+    params <- data.frame(rho = rho_sample, log_sig = log_sig_sample)
+    samples <- matrix(NA, nrow = nrow(params), ncol = length(y))
+    for (i in seq_len(nrow(params))) {
+      samples[i, ] <- ar_post_predictive(params[i, "rho"], params[i, "log_sig"])
+    }
+
+    plot(
+      x = seq_along(samples[1, seq(1, length(y))]),
+      y = samples[1, seq(1, length(y))],
+      type = "l",
+      col = "gray",
+      xlab = "Time",
+      ylab = expression(omega[t]),
+      main = "Posterior Predictive Samples vs. Observed Data",
+    )
+    for (i in 2:1000) {
+      lines(x = seq_along(samples[i]), y = samples[i], col = "gray")
+    }
+    lines(x = seq_along(y), y = y, col = "blue")
+
+    skewness_obs <- skewness(y[seq(2, length(y))])
+    sample_skewness <- apply(samples, 1, function(x) skewness(x[seq(2, length(y))]))
+    hist(
+      x = sample_skewness,
+      main = "Skewness of Posterior Predictive Samples",
+      xlab = "Skewness",
+      col = "gray",
+      border = "white",
+    )
+    lines(
+      x = c(skewness_obs, skewness_obs),
+      y = c(0, 250),
+      col = "black",
+      lwd = 2,
+    )
+    text(
+      x = skewness_obs + 0.2,
+      y = 250,
+      labels = paste("Observed Skewness = ", round(skewness_obs, 2)),
+      pos = 1
+    )
+
+    kurtosis_obs <- kurtosis(y[seq(2, length(y))])
+    sample_kurtosis <- apply(samples, 1, function(x) kurtosis(x[seq(2, length(y))]))
+    hist(
+      x = sample_kurtosis,
+      main = "Kurtosis of Posterior Predictive Samples",
+      xlab = "Kurtosis",
+      col = "gray",
+      border = "white",
+    )
+    lines(
+      x = c(kurtosis_obs, kurtosis_obs),
+      y = c(0, 150),
+      col = "black",
+      lwd = 2,
+    )
+    text(
+      x = kurtosis_obs + 0.5,
+      y = 150,
+      labels = paste("Observed Kurtosis = ", round(kurtosis_obs, 2)),
+      pos = 1
+    )
+
+    y <- data[["cases"]]
+    y <- diff(y[as.Date(data$date) >= as.Date("2020-06-30") &
+                  as.Date(data$date) <= as.Date("2020-08-25")], lag = 1) / 1000
+    samples <- matrix(NA, nrow = nrow(params), ncol = length(y))
+    for (i in seq_len(nrow(params))) {
+      samples[i, ] <- ar_post_predictive(params[i, "rho"], params[i, "log_sig"])
+    }
+
+    plot(
+      x = seq_along(samples[1, seq(1, length(y))]),
+      y = samples[1, seq(1, length(y))],
+      type = "l",
+      col = "gray",
+      xlab = "Time",
+      ylab = expression(omega[t]),
+      main = "Posterior Predictive Samples vs. Observed Data",
+    )
+    for (i in 2:1000) {
+      lines(x = seq_along(samples[i]), y = samples[i], col = "gray")
+    }
+    lines(x = seq_along(y), y = y, col = "blue")
+
+    skewness_obs <- skewness(y[seq(2, length(y))])
+    sample_skewness <- apply(samples, 1, function(x) skewness(x[seq(2, length(y))]))
+    hist(
+      x = sample_skewness,
+      main = "Skewness of Posterior Predictive Samples",
+      xlab = "Skewness",
+      col = "gray",
+      border = "white",
+    )
+    lines(
+      x = c(skewness_obs, skewness_obs),
+      y = c(0, 250),
+      col = "black",
+      lwd = 2,
+    )
+    text(
+      x = skewness_obs + 0.5,
+      y = 250,
+      labels = paste("Observed Skewness = ", round(skewness_obs, 2)),
+      pos = 1
+    )
+
+    kurtosis_obs <- kurtosis(y[seq(2, length(y))])
+    sample_kurtosis <- apply(samples, 1, function(x) kurtosis(x[seq(2, length(y))]))
+    hist(
+      x = sample_kurtosis,
+      main = "Kurtosis of Posterior Predictive Samples",
+      xlab = "Kurtosis",
+      col = "gray",
+      border = "white",
+    )
+    lines(
+      x = c(kurtosis_obs, kurtosis_obs),
+      y = c(0, 250),
+      col = "black",
+      lwd = 2,
+    )
+    text(
+      x = kurtosis_obs + 1.5,
+      y = 250,
+      labels = paste("Observed Kurtosis = ", round(kurtosis_obs, 2)),
+      pos = 1
+    )
+    ```
+
+    From the results, the model is capable of providing good predictions for the COVID-19 cases in Indiana. By comparing the time-series plot of cases in Indiana and in the US, the trend of the cases in Indiana is similar to the trend of the cases in the US. Therefore, the AR(1) model with the same prior can retain its predictive power transferring from the entire US to just Indiana.
 
 8. (5 points) Provide a non-technical explanation of your finds for an audience with minimal statistical training. Specifically, describe the AR(1) model in lay terms, explain whether or not this model provides good predictions in this context, and provide intuitive justifications for why the AR(1) model succeeds or fails in this context.
